Prepare for crates.io publication
- Add complete metadata to all Cargo.toml files
  - description, license, repository (ynishi), keywords, categories
  - readme for main crate
  - version dependencies for workspace crates
- Add LICENSE-MIT and LICENSE-APACHE files
- Add Makefile for workspace management
- Ready for cargo publish

--- a/crates/schema-bridge-macro/Cargo.toml
+++ b/crates/schema-bridge-macro/Cargo.toml
@@ -2,6 +2,12 @@
 name = "schema-bridge-macro"
 version = "0.1.0"
 edition = "2021"
+authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
+description = "Procedural macro for schema-bridge - derive TypeScript type definitions from Rust types"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/ynishi/tauri-schema"
+keywords = ["typescript", "codegen", "macro", "tauri", "bridge"]
+categories = ["development-tools", "web-programming"]
 
 [lib]
 proc-macro = true
