--- a/crates/schema-bridge-core/Cargo.toml
+++ b/crates/schema-bridge-core/Cargo.toml
@@ -2,6 +2,12 @@
 name = "schema-bridge-core"
 version = "0.1.0"
 edition = "2021"
+authors = ["Yutaka Nishimura <ytk.nishimura@gmail.com>"]
+description = "Core types and traits for schema-bridge - TypeScript type generation from Rust"
+license = "MIT OR Apache-2.0"
+repository = "https://github.com/ynishi/tauri-schema"
+keywords = ["typescript", "codegen", "types", "tauri", "bridge"]
+categories = ["development-tools", "web-programming"]
 
 [dependencies]
 serde = { version = "1.0", features = ["derive"] }
