--- a/examples/basic/Cargo.toml
+++ b/examples/basic/Cargo.toml
@@ -2,6 +2,7 @@
 name = "example-basic"
 version = "0.1.0"
 edition = "2021"
+publish = false
 
 [dependencies]
 schema-bridge = { path = "../../crates/schema-bridge" }
